--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="cat">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
+    <title>PROVES</title>
+</head>
+<body>
+    <header>
+        <section id="menu">
+          <ul>
+            <a href="#">Inici0</a>
+            <a href="#">Inici1</a>
+            <a href="#">Inici2</a>
+            <a href="#">Inici3</a>
+          </ul>
+        </section>
+      </header>
+</body>
+</html>
