--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <title>PROVES</title>
 </head>
 <body>
-    <header>
-        <section id="menu">
-          <ul>
-            <a href="#">Inici0</a>
-            <a href="#">Inici1</a>
-            <a href="#">Inici2</a>
-            <a href="#">Inici3</a>
-          </ul>
-        </section>
-      </header>
+    <nav>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Inici1</a></li>
+          <li><a href="#">Inici2</a></li>
+          <li><a href="#">Inici3</a></li>
+        </ul>
+      </nav>
+      
 </body>
 </html>
