--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title>PROVES</title>
 </head>
 <body>
-    <nav>
-        <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Inici1</a></li>
-          <li><a href="#">Inici2</a></li>
-          <li><a href="#">Inici3</a></li>
-        </ul>
-      </nav>
-      
+    <header>
+        <nav class=""nav>
+            <div class="logo">CAT CODE</div>
+            <ul class="menu">
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Inici1</a></li>
+              <li><a href="#">Inici2</a></li>
+              <li><a href="#">Inici3</a></li>
+            </ul>
+          </nav>
+    </header>
 </body>
 </html>
