--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class=""nav>
-            <div class="logo">CAT CODE</div>
+            <div class="logo"></div>
             <ul class="menu">
               <li><a href="#">Inicio</a></li>
               <li><a href="#">Inici1</a></li>
