--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <nav class=""nav>
             <ul class="menu">
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#">Inici1</a></li>
-              <li><a href="#">Inici2</a></li>
-              <li><a href="#">Inici3</a></li>
+              <li><a href="#">Inici</a></li>
+              <li><a href="#">CANTATNS</a></li>
+              <li><a href="#">POPULARITAT</a></li>
+              <li><a href="#">PREMIS</a></li>
             </ul>
           </nav>
     </header>
