--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav class=""nav>
             <ul class="menu">
               <li><a href="#">Inici</a></li>
-              <li><a href="#">CANTATNS</a></li>
-              <li><a href="#">POPULARITAT</a></li>
-              <li><a href="#">PREMIS</a></li>
+              <li><a href="#">Personatgets</a></li>
+              <li><a href="#">Popularitat</a></li>
+              <li><a href="#">wikipedia</a></li>
             </ul>
           </nav>
     </header>
