--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>PROVES</title>
 </head>
 <body>
- 
-        <nav class=""nav>
+ <header>
+  <nav class=""nav>
             <ul class="menu">
               <li><a href="#">Inici</a></li>
               <li><a href="#">Personatgets</a></li>
@@ -17,6 +17,8 @@
               <li><a href="#">wikipedia</a></li>
             </ul>
           </nav>
+ </header>
+       
 
 </body>
 </html>
