--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="image-container">
     <img src="https://cdn.milenio.com/uploads/media/2020/12/09/arcangel-dio-a-conocer-su.jpg" alt="Imagen">
     <div class="overlay">
-      <div class="text">Efecto Hover</div>
+      <div class="text">ARCANGEL</div>
     </div>
   </div>
   
