--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     <title>PROVES</title>
 </head>
 <body>
-  <div class="image-container1">
-    <img src="https://cdn.milenio.com/uploads/media/2020/12/09/arcangel-dio-a-conocer-su.jpg" alt="Imatge1">
-    <img src="https://imagenes.elpais.com/resizer/Lzw9nPOgcRjMUdhXL0HL9-qzLTA=/1960x1103/cloudfront-eu-central-1.images.arcpublishing.com/prisa/TV22SJWVXKNIHD4EFA66URSNKM.jpg" alt="Imatge2">
-    <div class="overlay1"><div class="text1">ARCANGEL</div></div>
-    <div class="overlay2"><div class="text2">Bad Bunny</div></div>
+  <div class="image-wrapper">
+    <div class="image-container">
+      <img src="https://cdn.milenio.com/uploads/media/2020/12/09/arcangel-dio-a-conocer-su.jpg" alt="Imagen 1">
+      <div class="overlay">
+        <div class="text">Imagen 1</div>
+      </div>
+    </div>
+    <div class="image-container">
+      <img src="https://imagenes.elpais.com/resizer/Lzw9nPOgcRjMUdhXL0HL9-qzLTA=/1960x1103/cloudfront-eu-central-1.images.arcpublishing.com/prisa/TV22SJWVXKNIHD4EFA66URSNKM.jpg" alt="Imagen 2">
+      <div class="overlay">
+        <div class="text">Imagen 2</div>
+      </div>
+    </div>
   </div>
-  
-  
 </body>
 </html>
 
