--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <title>PROVES</title>
 </head>
 <body>
-  <nav class=""nav>
-    <ul class="menu">
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Acerca de</a>
-        <ul class="submenu">
-          <li><a href="#">PROBLMES</a></li>
+  <div id="header">
+    <ul class="nav">
+      <li><a href="">Inici</a></li>
+
+      <li><a href="">Servicio</a>
+        <ul>
+          <li><a href="">Submenu 1</a></li>
         </ul>
-      
       </li>
     </ul>
-  </nav>
-  
+  </div>
 </body>
 </html>
 
