--- a/index.html
+++ b/index.html
@@ -12,9 +12,28 @@
     <ul class="nav">
       <li><a href="">Inici</a></li>
 
-      <li><a href="">Servicio</a>
+      <li><a href="">Informació dels Cantants</a>
         <ul>
-          <li><a href="">Submenu 1</a></li>
+          <li><a href="">Arcàngel</a></li>
+          <li><a href="">Bad Bunny</a></li>
+          <li><a href="">Santa Fe Klan</a></li>
+          <li><a href="">Tornillo</a></li>
+          <li><a href="">Bruno Mars</a></li>
+        </ul>
+      </li>
+
+      <li><a href="">Cançons Favorites</a>
+        <ul>
+          <li><a href="">Canço 1</a></li>
+          <li><a href="">Canço 2</a></li>
+          <li><a href="">Canço 3</a></li>
+          <li><a href="">Canço 4</a></li>
+          <li><a href="">Canço 5</a></li>
+          <li><a href="">Canço 6</a></li>
+          <li><a href="">Canço 7</a></li>
+          <li><a href="">Canço 8</a></li>
+          <li><a href="">Canço 9</a></li>
+          <li><a href="">Canço 10</a></li>
         </ul>
       </li>
     </ul>
