--- a/index.html
+++ b/index.html
@@ -14,11 +14,31 @@
 
       <li><a href="">Informació dels Cantants</a>
         <ul>
-          <li><a href="">Arcàngel</a></li>
-          <li><a href="">Bad Bunny</a></li>
-          <li><a href="">Santa Fe Klan</a></li>
-          <li><a href="">Tornillo</a></li>
-          <li><a href="">Bruno Mars</a></li>
+          <li><a href="">Arcàngel</a>
+            <ul>
+              <li><a href="">Popularitat</a></li>
+            </ul>
+          </li>
+          <li><a href="">Bad Bunny</a>
+            <ul>
+              <li><a href="">Popularitat</a></li>
+            </ul>
+          </li>
+          <li><a href="">Santa Fe Klan</a>
+            <ul>
+              <li><a href="">Popularitat</a></li>
+            </ul>
+          </li>
+          <li><a href="">Tornillo</a>
+            <ul>
+              <li><a href="">Popularitat</a></li>
+            </ul>
+          </li>
+          <li><a href="">Bruno Mars</a>
+            <ul>
+              <li><a href="">Popularitat</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
 
@@ -36,6 +56,17 @@
           <li><a href="">Canço 10</a></li>
         </ul>
       </li>
+      
+      <li><a href="">Més Informació</a>
+        <ul>
+          <li><a href="">Arcàngel</a></li>
+          <li><a href="">Bad Bunny</a></li>
+          <li><a href="">Santa Fe Klan</a></li>
+          <li><a href="">Tornillo</a></li>
+          <li><a href="">Bruno Mars</a></li>
+        </ul>
+      </li>
+
     </ul>
   </div>
 </body>
