--- a/index.html
+++ b/index.html
@@ -44,16 +44,20 @@
 
       <li><a href="">Cançons Favorites</a>
         <ul>
-          <li><a href="">Canço 1</a></li>
-          <li><a href="">Canço 2</a></li>
-          <li><a href="">Canço 3</a></li>
-          <li><a href="">Canço 4</a></li>
-          <li><a href="">Canço 5</a></li>
-          <li><a href="">Canço 6</a></li>
-          <li><a href="">Canço 7</a></li>
-          <li><a href="">Canço 8</a></li>
-          <li><a href="">Canço 9</a></li>
-          <li><a href="">Canço 10</a></li>
+          <li><a href="">Top 10 Cançons</a>
+            <ul>
+              <li><a href="">Canço 1</a></li>
+              <li><a href="">Canço 2</a></li>
+              <li><a href="">Canço 3</a></li>
+              <li><a href="">Canço 4</a></li
+              <li><a href="">Canço 5</a></li>
+              <li><a href="">Canço 6</a></li>
+              <li><a href="">Canço 7</a></li>
+              <li><a href="">Canço 8</a></li>
+              <li><a href="">Canço 9</a></li>
+              <li><a href="">Canço 10</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
       
