--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
       
       <li><a href="">Més Informació</a>
         <ul>
-          <li><a href="">Arcàngel</a></li>
-          <li><a href="">Bad Bunny</a></li>
-          <li><a href="">Santa Fe Klan</a></li>
-          <li><a href="">Tornillo</a></li>
-          <li><a href="">Bruno Mars</a></li>
+          <li><a href="https://ca.wikipedia.org/wiki/Arc%C3%A1ngel" target="_blank">Arcàngel</a></li>
+          <li><a href="https://ca.wikipedia.org/wiki/Bad_Bunny" target="_blank">Bad Bunny</a></li>
+          <li><a href="https://es.wikipedia.org/wiki/Santa_Fe_Klan" target="_blank">Santa Fe Klan</a></li>
+          <li><a href="https://www.elsoldeleon.com.mx/gossip/quien-es-el-tornillo-rapero-promesa-de-santa-fe-klan-video-8162742.html" target="_blank">Tornillo</a></li>
+          <li><a href="https://ca.wikipedia.org/wiki/Bruno_Mars" target="_blank">Bruno Mars</a></li>
         </ul>
       </li>
 
