--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>PROVES</title>
 </head>
 <body>
-  <div id="header">
+  <div id="menu">
     <ul class="nav">
       
       <li><a href="">Inici</a></li>
