--- a/index.html
+++ b/index.html
@@ -1,35 +1,73 @@
 <!DOCTYPE html>
 <html lang="cat">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/style.css">
-  <link rel="stylesheet" href="javascript/script.js">
-  <title>PROVA</title>
-</head>
-<body>
-  
-  <div class="tab">
-    <button class="tablinks" onclick="openTab(event, 'home')">Inicio</button>
-    <button class="tablinks" onclick="openTab(event, 'about')">Sobre nosotros</button>
-    <button class="tablinks" onclick="openTab(event, 'contact')">Contacto</button>
-  </div>
-  
-  <div id="home" class="tabcontent">
-    <h3>Inicio</h3>
-    <p>Contenido de la pestaña de inicio</p>
-  </div>
-  
-  <div id="about" class="tabcontent">
-    <h3>Sobre nosotros</h3>
-    <p>Contenido de la pestaña "Sobre nosotros"</p>
-  </div>
-  
-  <div id="contact" class="tabcontent">
-    <h3>Contacto</h3>
-    <p>Contenido de la pestaña "Contacto"</p>
-  </div>
-  
-</body>
-</html>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
+    <title>PROVES</title>
+  </head>
+  <body>
+  </body>
+  </html>
+  <div id="menu">
+    <ul class="nav">
+      <li><a href="">Inici</a></li>
+      <li><a href="">Informació dels Cantants</a>
+        <ul>
+          <li><a href="">Arcàngel</a>
+            <ul>
+              <li><a href="">Popularitat</a></li>
+            </ul>
+</li>
+<li><a href="">Bad Bunny</a>
+<ul>
+<li><a href="">Popularitat</a></li>
+</ul>
+</li>
+<li><a href="">Santa Fe Klan</a>
+<ul>
+<li><a href="">Popularitat</a></li>
+</ul>
+</li>
+<li><a href="">Tornillo</a>
+<ul>
+<li><a href="">Popularitat</a></li>
+</ul>
+</li>
+<li><a href="">Bruno Mars</a>
+<ul>
+<li><a href="">Popularitat</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="">Cançons Favorites</a>
+<ul>
+<li><a href="">Top 10 Cançons</a>
+<ul>
+<li><a href="">Canço 1</a></li>
+<li><a href="">Canço 2</a></li>
+<li><a href="">Canço 3</a></li>
+<li><a href="">Canço 4</a></li
+<li><a href="">Canço 5</a></li>
+<li><a href="">Canço 6</a></li>
+<li><a href="">Canço 7</a></li>
+<li><a href="">Canço 8</a></li>
+<li><a href="">Canço 9</a></li>
+<li><a href="">Canço 10</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="">Més Informació</a>
+<ul>
+<li><a href="https://ca.wikipedia.org/wiki/Arc%C3%A1ngel" target="_blank">Arcàngel</a></li>
+<li><a href="https://ca.wikipedia.org/wiki/Bad_Bunny" target="_blank">Bad Bunny</a></li>
+<li><a href="https://es.wikipedia.org/wiki/Santa_Fe_Klan" target="_blank">Santa Fe Klan</a></li>
+<li><a href="https://www.elsoldeleon.com.mx/gossip/quien-es-el-tornillo-rapero-promesa-de-santa-fe-klan-video-8162742.html" target="_blank">Tornillo</a></li>
+<li><a href="https://ca.wikipedia.org/wiki/Bruno_Mars" target="_blank">Bruno Mars</a></li>
+</ul>
+</li>
+</ul>
+</div>
