--- a/index.html
+++ b/index.html
@@ -12,35 +12,15 @@
   </html>
   
     <ul class="nav">
-      <li><a href="" onclick="abrirPestana()">Inici</a></li>
+      <li><a href="">Inici</a></li>
     
       <li><a href="">Informació dels Cantants</a>
         <ul>
-          <li><a href="">Arcàngel</a>
-            <ul>
-              <li><a href="">Popularitat</a></li>
-            </ul>
-          </li>
-          <li><a href="">Bad Bunny</a>
-            <ul>
-              <li><a href="">Popularitat</a></li>
-            </ul>
-          </li>
-          <li><a href="">Santa Fe Klan</a>
-            <ul>
-              <li><a href="">Popularitat</a></li>
-            </ul>
-          </li>
-          <li><a href="">Tornillo</a>
-            <ul>
-              <li><a href="">Popularitat</a></li>
-            </ul>
-          </li>
-          <li><a href="">Bruno Mars</a>
-            <ul>
-              <li><a href="">Popularitat</a></li>
-            </ul>
-          </li>
+          <li><a href="" onclick="PestanyaArcàngel()">Arcàngel</a></li>
+          <li><a href="" onclick="PestanyaBabBunny()">Bad Bunny</a></li>
+          <li><a href="" onclick="PestanyaSantaFeKlan()">Santa Fe Klan</a></li>
+          <li><a href="" onclick="PestanyaTornillo()">Tornillo</a></li>
+          <li><a href="" onclick="PestanyaBrunoMars()">Bruno Mars</a></li>
         </ul>
       </li>
 
@@ -76,8 +56,9 @@
     
 
     <script>
-      function abrirPestana() {
-          window.open("","_blank").document.write("Hola a todos");
+      function PestanyaArcàngel() 
+      {
+          window.open("","_blank").document.write("Arcàngel");
       }
   </script>
   
