--- a/index.html
+++ b/index.html
@@ -60,5 +60,21 @@
       {
           window.open("","_blank").document.write("Arcàngel");
       }
+      function PestanyaBabBunny() 
+      {
+          window.open("","_blank").document.write("Bab Bunny");
+      }
+      function PestanyaSantaFeKlan() 
+      {
+          window.open("","_blank").document.write("Santa Fe Klan");
+      }
+      function PestanyaTornillo() 
+      {
+          window.open("","_blank").document.write("Tornillo");
+      }
+      function PestanyaBrunoMars() 
+      {
+          window.open("","_blank").document.write("Bruno Mars");
+      }
   </script>
   
