--- a/index.html
+++ b/index.html
@@ -62,9 +62,20 @@
     
 
     <script>
-      function PestanyaArcàngel() 
+      function PestanyaArcàngel(evt, submenuName) 
       {
-          window.open("","_blank").document.write("Arcàngel");
+        var i, subnavcontent, subnavlinks;
+        subnavcontent = document.getElementsByClassName("subnav-content");
+        for (i=0; i< subnavcontent.length; i++)  
+        window.open("","_blank").document.write("Arcàngel"); {
+          subnavcontent[i].style.display="none";
+        }
+        subnavlinks = document.getElementsByClassName("subnav")[0].getElementsByTagName("a");
+			for (i = 0; i < subnavlinks.length; i++) {
+				subnavlinks[i].classList.remove("active");
+			}
+			document.getElementById(submenuName).style.display = "block";
+			evt.currentTarget.classList.add("active");
       }
   </script>
   
