--- a/index.html
+++ b/index.html
@@ -1,79 +1,37 @@
 <!DOCTYPE html>
 <html lang="cat">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <title>PROVES</title>
-  </head>
-  <body>
-  </body>
-  </html>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Proves</title>
+</head>
+<body>
   
-    <ul class="nav">
-      <li><a href="">Inici</a></li>
-    
-      <li><a href="">Informació dels Cantants</a>
-        <ul>
-          <li><a href="" onclick="PestanyaArcàngel()">Arcàngel</a></li>
-          <li><a href="" onclick="PestanyaBabBunny()">Bad Bunny</a></li>
-          <li><a href="" onclick="PestanyaSantaFeKlan()">Santa Fe Klan</a></li>
-          <li><a href="" onclick="PestanyaTornillo()">Tornillo</a></li>
-          <li><a href="" onclick="PestanyaBrunoMars()">Bruno Mars</a></li>
-        </ul>
-      </li>
+<div class="container">
+  <table>
+    <thead>
+      <tr>
+        <th>N</th>
+        <th>Nombre</th>
+        <th>APELLIDO</th>
+        <th>EDAD</th>
+        <th>TELEFONO</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>01</td>
+        <td>Carlos</td>
+        <td>Torres</td>
+        <td>34</td>
+        <td>94395093485934</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-      <li><a href="">Cançons Favorites</a>
-        <ul>
-          <li><a href="">Top 10 Cançons</a>
-            <ul>
-              <li><a href="">Canço 1</a></li>
-              <li><a href="">Canço 2</a></li>
-              <li><a href="">Canço 3</a></li>
-              <li><a href="">Canço 4</a></li>
-              <li><a href="">Canço 5</a></li>
-              <li><a href="">Canço 6</a></li>
-              <li><a href="">Canço 7</a></li>
-              <li><a href="">Canço 8</a></li>
-              <li><a href="">Canço 9</a></li>
-              <li><a href="">Canço 10</a></li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-
-      <li><a href="">Més Informació</a>
-        <ul>
-          <li><a href="https://ca.wikipedia.org/wiki/Arc%C3%A1ngel" target="_blank">Arcàngel</a></li>
-          <li><a href="https://ca.wikipedia.org/wiki/Bad_Bunny" target="_blank">Bad Bunny</a></li>
-          <li><a href="https://es.wikipedia.org/wiki/Santa_Fe_Klan" target="_blank">Santa Fe Klan</a></li>
-          <li><a href="https://www.elsoldeleon.com.mx/gossip/quien-es-el-tornillo-rapero-promesa-de-santa-fe-klan-video-8162742.html" target="_blank">Tornillo</a></li>
-          <li><a href="https://ca.wikipedia.org/wiki/Bruno_Mars" target="_blank">Bruno Mars</a></li>
-        </ul>
-      </li>
-    </ul>
+</body>
+</html>
     
 
-    <script>
-      function PestanyaArcàngel() 
-      {
-          window.open("","_blank").document.write("Arcàngel");
-      }
-      function PestanyaBabBunny() 
-      {
-          window.open("","_blank").document.write("Bab Bunny");
-      }
-      function PestanyaSantaFeKlan() 
-      {
-          window.open("","_blank").document.write("Santa Fe Klan");
-      }
-      function PestanyaTornillo() 
-      {
-          window.open("","_blank").document.write("Tornillo");
-      }
-      function PestanyaBrunoMars() 
-      {
-          window.open("","_blank").document.write("Bruno Mars");
-      }
-  </script>
