--- a/index.html
+++ b/index.html
@@ -12,20 +12,42 @@
   <table>
     <thead>
       <tr>
-        <th>N</th>
-        <th>Nombre</th>
-        <th>APELLIDO</th>
+        <th>Num</th>
+        <th>Nom d'Artista</th>
+        <th>Nom Real</th>
         <th>EDAD</th>
-        <th>TELEFONO</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>01</td>
+        <td>Arcàgel</td>
+        <td>Torres</td>
+        <td>34</td>
+      </tr>
+      <tr>
+        <td>02</td>
+        <td>Bad Bunny</td>
+        <td>Torres</td>
+        <td>34</td>
+      </tr>
+      <tr>
+        <td>03</td>
         <td>Carlos</td>
         <td>Torres</td>
         <td>34</td>
-        <td>94395093485934</td>
+      </tr>
+      <tr>
+        <td>04</td>
+        <td>Carlos</td>
+        <td>Torres</td>
+        <td>34</td>
+      </tr>
+      <tr>
+        <td>05</td>
+        <td>Carlos</td>
+        <td>Torres</td>
+        <td>34</td>
       </tr>
     </tbody>
   </table>
