--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <tr>
         <td>01</td>
         <td>Arcàgel</td>
-        <td>Torres</td>
+        <td></td>
         <td>34</td>
       </tr>
       <tr>
@@ -33,19 +33,19 @@
       </tr>
       <tr>
         <td>03</td>
-        <td>Carlos</td>
+        <td>Santa Fe Klan</td>
         <td>Torres</td>
         <td>34</td>
       </tr>
       <tr>
         <td>04</td>
-        <td>Carlos</td>
+        <td>Tornillo</td>
         <td>Torres</td>
         <td>34</td>
       </tr>
       <tr>
         <td>05</td>
-        <td>Carlos</td>
+        <td>Bruno Mars</td>
         <td>Torres</td>
         <td>34</td>
       </tr>
