--- a/index.html
+++ b/index.html
@@ -22,31 +22,31 @@
       <tr>
         <td>01</td>
         <td>Arcàgel</td>
-        <td></td>
+        <td>Austin Agustín Santos</td>
         <td>34</td>
       </tr>
       <tr>
         <td>02</td>
         <td>Bad Bunny</td>
-        <td>Torres</td>
+        <td>Benito Antonio Martínez Ocasio</td>
         <td>34</td>
       </tr>
       <tr>
         <td>03</td>
         <td>Santa Fe Klan</td>
-        <td>Torres</td>
+        <td>Ángel Jair Quezada Jasso</td>
         <td>34</td>
       </tr>
       <tr>
         <td>04</td>
         <td>Tornillo</td>
-        <td>Torres</td>
+        <td>Osiel Armando Vásquez Pérez</td>
         <td>34</td>
       </tr>
       <tr>
         <td>05</td>
         <td>Bruno Mars</td>
-        <td>Torres</td>
+        <td>Peter Gene Hernández</td>
         <td>34</td>
       </tr>
     </tbody>
