--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Proves</title>
 </head>
 <body>
-  
-<div class="container">
+
+<header>
+  <div class="container">
   <table>
     <thead>
       <tr>
@@ -52,6 +53,8 @@
     </tbody>
   </table>
 </div>
+</header>  
+
 
 </body>
 </html>
