--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
 </head>
 <body>
 
+  <style>
+  table {
+    font-family: Arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  th {
+    background-color: #dddddd;
+    font-weight: bold;
+    font-size: 16px;
+  }
+  
+  td {
+    font-size: 14px;
+  }
+  </style>
+  
+  | Número | Nombre | Nombre Real | Edad |
+  | ------ | ------ | ----------- | ---- |
+  | 1      | Ana    | Ana García  | 25   |
+  | 2      | Juan   | Juan Pérez  | 30   |
+  | 3      | Luis   | Luis Sánchez| 22   |
+  | 4      | María  | María López | 27   |
+  | 5      | Pedro  | Pedro Ramírez| 35  |
+  
 </body>
 </html>
     
