--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
 
+  <table>
+    <tr>
+      <th>Numero</th>
+      <th>Nom Artistic</th>
+      <th>Nom Real</th>
+      <th>Edad</th>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>Arcàngel</td>
+      <td>Austin Agustín Santos</td>
+      <td>37</td>
+    </tr>
+  </table>
+
 </body>
 </html>
     
