--- a/index.html
+++ b/index.html
@@ -21,6 +21,30 @@
       <td>Austin Agustín Santos</td>
       <td>37</td>
     </tr>
+    <tr>
+      <td>2</td>
+      <td>Arcàngel</td>
+      <td>Austin Agustín Santos</td>
+      <td>37</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Arcàngel</td>
+      <td>Austin Agustín Santos</td>
+      <td>37</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Tornillo</td>
+      <td>Osiel Armando Váquez Pérez</td>
+      <td>37</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Bruno Mars</td>
+      <td>Peter Gene Hernández</td>
+      <td>37</td>
+    </tr>
   </table>
 
 </body>
