--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </tr>
     <tr>
       <td>3</td>
-      <td>Arcàngel</td>
-      <td>Austin Agustín Santos</td>
-      <td>37</td>
+      <td>Santa Fe Klan</td>
+      <td>Ángel Jair Quezada Jasso</td>
+      <td>23</td>
     </tr>
     <tr>
       <td>4</td>
