--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </tr>
     <tr>
       <td>2</td>
-      <td>Arcàngel</td>
-      <td>Austin Agustín Santos</td>
-      <td>37</td>
+      <td>Bab Bunny</td>
+      <td>Benito Antonio Martínez Ocasio</td>
+      <td>28</td>
     </tr>
     <tr>
       <td>3</td>
