--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <tr>
       <th>Numero</th>
-      <th>Nom Artistic</th>
+      <th>Nom Artístic</th>
       <th>Nom Real</th>
       <th>Edad</th>
     </tr>
@@ -51,7 +51,7 @@
       <td>Peter Gene Hernández</td>
       <td>37</td>
     </tr>
-    
+
   </table>
 
 </body>
