--- a/index.html
+++ b/index.html
@@ -6,53 +6,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proves</title>
 </head>
+
 <body>
 
-  <table>
 
-    <tr>
-      <th>Numero</th>
-      <th>Nom Artístic</th>
-      <th>Nom Real</th>
-      <th>Edad</th>
-    </tr>
+  <div class="parag">
+    <table>
+        <thead>
+          <tr>
+                <th style="text-align: left;">Llibre</th>
+                <th>Amazon</th>
+                <th style="text-align: right;">Abacus</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td style="text-align: left;"><b>Tintín al Congo</b></td>
+                <td>13,20€</td>
+                <td style="text-align: right;">13,20€</td>
+            </tr>
+            <tr>
+                <td style="text-align: left;"><b>Tintín a Amèrica</b></td>
+                <td>13,20€</td>
+                <td style="text-align: right;">13,20€</td>
+            </tr>
+            <tr>
+                <td style="text-align: left;"><b>L'illa negra</b></td>
+                <td>13,20€</td>
+                <td style="text-align: right;">13,20€</td>
+            </tr>
+            <tr>
+                <td style="text-align: left;"><b>Tintín al Tibet</b></td>
+                <td>13,20€</td>
+                <td style="text-align: right;">13,20€</td>
+            </tr>
+            <tr>
+                <td style="text-align: left;"><b>Tintín i els Pícaros</b></td>
+                <td>13,20€</td>
+                <td style="text-align: right;">13,20€</td>
+            </tr>
+          
+        </tbody>
+    </table>
+</div>
 
-    <tr>
-      <td>1</td>
-      <td>Arcàngel</td>
-      <td>Austin Agustín Santos</td>
-      <td>37</td>
-    </tr>
-
-    <tr>
-      <td>2</td>
-      <td>Bab Bunny</td>
-      <td>Benito Antonio Martínez Ocasio</td>
-      <td>28</td>
-    </tr>
-
-    <tr>
-      <td>3</td>
-      <td>Santa Fe Klan</td>
-      <td>Ángel Jair Quezada Jasso</td>
-      <td>23</td>
-    </tr>
-
-    <tr>
-      <td>4</td>
-      <td>Tornillo</td>
-      <td>Osiel Armando Váquez Pérez</td>
-      <td>37</td>
-    </tr>
-
-    <tr>
-      <td>5</td>
-      <td>Bruno Mars</td>
-      <td>Peter Gene Hernández</td>
-      <td>37</td>
-    </tr>
-
-  </table>
 
 </body>
 </html>
