--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
 
+    
+<header>
+
     <div class="container">
         <table>
             <thead>
@@ -54,6 +57,9 @@
             </tbody>
         </table>
     </div>
+
+</header>
+   
 
 </body>
 </html>
