--- a/index.html
+++ b/index.html
@@ -1,67 +1,14 @@
 <!DOCTYPE html>
-<html lang="cat">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/style.css">
-  <title>Proves</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
+    <title>Document</title>
 </head>
-
 <body>
-
     
-<header>
-
-    <div class="container">
-        <table>
-            <thead>
-                <tr>
-                    <th>Num</th>
-                    <th>Nom Artístic</th>
-                    <th>Nom Real</th>
-                    <th>Edad</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Arcangel</td>
-                    <td>Austin Agustin Santos</td>
-                    <td>37</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Bad Bunny</td>
-                    <td>Benito Antonio Martínez Ocasio</td>
-                    <td>28</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Santa Fe Klan</td>
-                    <td>Ángel Jair Quezado Jasso</td>
-                    <td>23</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>Tornillo</td>
-                    <td>Osiel Armando Vázquez Pérez</td>
-                    <td>19</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>Bruno Mars</td>
-                    <td>Peter Gene Hernández</td>
-                    <td>37</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-</header>
-   
-
 </body>
 </html>
-    
 
