--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>PROVAS PER LA WEB</title>
 </head>
 <body>
-    
+
+    <div class="slider-container">
+        <div class="slider-wrapper">
+            <div class="slide">slide 1</div>
+            <div class="slide">slide 2</div>
+            <div class="slide">slide 3</div>
+        </div>
+    </div>
+
 </body>
 </html>
 
