--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>PROVAS PER LA WEB</title>
 </head>
 <body>
+    <section class="banner">
+        <div class="banner-container">
+            <h1>HOLA</h1>
+        </div>
+    </section>
 </body>
 </html>
 
