--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
             <h1>HOLA</h1>
         </div>
     </section>
+
+    <section class="carrusel">
+        <div class="itemcarrusel1">
+            <div class="tarjetaCarrusel1">A</div>
+            <div class="flechasCarrusel1">
+                <i>I</i>
+                <i>D</i>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
