--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
     </section>
 
     <section class="carrusel">
-        <div class="itemcarrusel1">
-            <div class="tarjetaCarrusel1">A</div>
-            <div class="flechasCarrusel1">
-                <i>I</i>
-                <i>D</i>
+        <div id="conteItemsCarrusel">
+            <div class="itemcarrusel1">
+                <div class="tarjetaCarrusel1">A</div>
+                <div class="flechasCarrusel1">
+                    <i>I</i>
+                    <i>D</i>
+                </div>
+            </div>
+            <div class="itemcarrusel1">
+                <div class="tarjetaCarrusel1">B</div>
+                <div class="flechasCarrusel1">
+                    <i>I</i>
+                    <i>D</i>
+                </div>
             </div>
         </div>
+        
     </section>
 </body>
 </html>
