--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
                     <i>D</i>
                 </div>
             </div>
+            <div class="itemcarrusel1">
+                <div class="tarjetaCarrusel1">C</div>
+                <div class="flechasCarrusel1">
+                    <i>I</i>
+                    <i>D</i>
+                </div>
+            </div>
         </div>
         
     </section>
