--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>PROVAS PER LA WEB</title>
 </head>
 <body>
-
+    
+    <div class="carousel">
+        <div class="carousel-inner">
+          <img src="img1.jpg">
+          <img src="img2.jpg">
+          <img src="img3.jpg">
+          <img src="img4.jpg">
+        </div>
+      </div>
+      
 </body>
 </html>
 
