--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>PROVAS PER LA WEB</title>
 </head>
 <body>
-    
+
     <div class="carousel">
         <div class="carousel-inner">
-          <img src="img1.jpg">
-          <img src="img2.jpg">
-          <img src="img3.jpg">
-          <img src="img4.jpg">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRr1bKvMms9xx51U7fW0Dy2Dit8XJpitW2pV2kxcVGWgNx7CqdaKohfqvNvc-H9XYVlbX4&usqp=CAU">
+          <img src="https://static.wikia.nocookie.net/014f4871-3527-4b0c-9be9-9b95d2270de0/scale-to-width/370">
+          <img src="https://pbs.twimg.com/media/EzCm_32WUAEZPzI?format=jpg&name=large">
+          <img src="https://i.ytimg.com/vi/r88y7xCRe7g/mqdefault.jpg">
         </div>
       </div>
       
