--- a/index.html
+++ b/index.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <title>PROVAS PER LA WEB</title>
-</head>
-<body>
 
-    <div class="carousel">
-        <div class="carousel-inner">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRr1bKvMms9xx51U7fW0Dy2Dit8XJpitW2pV2kxcVGWgNx7CqdaKohfqvNvc-H9XYVlbX4&usqp=CAU" alt="imatge1">
-          <img src="https://static.wikia.nocookie.net/014f4871-3527-4b0c-9be9-9b95d2270de0/scale-to-width/370" alt="imatge2">
-          <img src="https://pbs.twimg.com/media/EzCm_32WUAEZPzI?format=jpg&name=large" alt="imatge3">
-          <img src="https://i.ytimg.com/vi/r88y7xCRe7g/mqdefault.jpg" alt="imatge4">
-        </div>
+    <link rel="stylesheet" href="style/style.css">
+
+    <title>PROVAS PER LA WEB</title>
+
+</head>
+
+<body>   
+
+  <div class="container-slider">
+    <div class="slider" id="slider">
+
+      <div class="slider__section">
+        <img src="" alt="" class="slider__img">
       </div>
-      
+
+      <div class="slider__section">
+        <img src="" alt="" class="slider__img">
+      </div>
+
+      <div class="slider__section">
+        <img src="" alt="" class="slider__img">
+      </div>
+
+      <div class="slider__section">
+        <img src="" alt="" class="slider__img">
+      </div>
+
+    </div>
+  </div>
+
 </body>
+
+<script src="java.js"></script>
+
 </html>
 
