--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       </div>
 
     </div>
+
+    <div class="slider__btn slider__btn--right">&#62;</div>
+    <div class="slider__btn slider__btn--left">&#60;</div>
+  
   </div>
 
 </body>
