--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     </div>
 
-    <div class="slider__btn slider__btn--right">&#62;</div>
-    <div class="slider__btn slider__btn--left">&#60;</div>
+    <div class="slider__btn slider__btn--right" id="btn-right">&#62;</div>
+    <div class="slider__btn slider__btn--left" id="btn-left">&#60;</div>
   
   </div>
 
