--- a/index.html
+++ b/index.html
@@ -16,35 +16,17 @@
 
 <body>   
 
-  <div class="container-slider">
-    <div class="slider" id="slider">
-
-      <div class="slider__section">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4G3msIJjbUJud8kjKCTGxvyQ0T8sx6ts1mA&usqp=CAU" 
-        alt="" class="slider__img">
-      </div>
-
-      <div class="slider__section">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQf11hZZFFddAF5gEzJ-Olga657NDB295HB0A&usqp=CAU" 
-        alt="" class="slider__img">
-      </div>
-
-      <div class="slider__section">
-        <img src="https://i.pinimg.com/736x/37/e7/d7/37e7d7aa4e0348893c240c92672a6ac0.jpg" 
-        alt="" class="slider__img">
-      </div>
-
-      <div class="slider__section">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXXm8pPT-X5vBoCxB3mOzHBUnvGKlNWljTQ0ifRfx-a7iAF5maJOg7rIoq54Qw9nndL_A&usqp=CAU" 
-        alt="" class="slider__img">
-      </div>
-
+  <div class="slider">
+    <div class="slides">
+      <img src="imagen1.jpg">
+      <img src="imagen2.jpg">
+      <img src="imagen3.jpg">
+      <img src="imagen4.jpg">
     </div>
-
-    <div class="slider__btn slider__btn--right" id="btn-right">&#62;</div>
-    <div class="slider__btn slider__btn--left" id="btn-left">&#60;</div>
-  
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
   </div>
+  
 
 </body>
 
