--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <div class="slider">
     <div class="slides">
-      <img src="imagen1.jpg">
-      <img src="imagen2.jpg">
-      <img src="imagen3.jpg">
-      <img src="imagen4.jpg">
+      <img src="baki.jpeg">
+      <img src="jack.jpeg">
+      <img src="yujiro.jpg">
+      <img src="yuuhichiro.jpeg">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
