--- a/index.html
+++ b/index.html
@@ -16,21 +16,38 @@
 
 <body>   
 
-  <div class="slider">
-    <div class="slides">
-      <img src="baki.jpeg">
-      <img src="jack.jpeg">
-      <img src="yujiro.jpg">
-      <img src="yuuhichiro.jpeg">
+  <div class="container-slider">
+    <div class="slider" id="slider">
+
+      <div class="slider__section">
+        <img src="baki.jpeg" 
+        alt="" class="slider__img">
+      </div>
+
+      <div class="slider__section">
+        <img src="jack.jpeg" 
+        alt="" class="slider__img">
+      </div>
+
+      <div class="slider__section">
+        <img src="yujiro.jpg" 
+        alt="" class="slider__img">
+      </div>
+
+      <div class="slider__section">
+        <img src="yuuhichiro.jpeg" 
+        alt="" class="slider__img">
+      </div>
+
     </div>
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
+
+    <div class="slider__btn slider__btn--right" id="btn-right">&#62;</div>
+    <div class="slider__btn slider__btn--left" id="btn-left">&#60;</div>
   
+  </div>
 
 </body>
 
 <script src="java.js"></script>
 
 </html>
-
