--- a/index.html
+++ b/index.html
@@ -1,49 +1,32 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="style/style.css">
-
     <title>PROVAS PER LA WEB</title>
-
 </head>
 
 <body>   
 
   <div class="container-slider">
     <div class="slider" id="slider">
-
       <div class="slider__section">
-        <img src="baki.jpeg" 
-        alt="" class="slider__img">
+        <img src="baki.jpeg"  alt="" class="slider__img">
       </div>
-
       <div class="slider__section">
-        <img src="jack.jpeg" 
-        alt="" class="slider__img">
+        <img src="jack.jpeg" alt="" class="slider__img">
       </div>
-
       <div class="slider__section">
-        <img src="yujiro.jpg" 
-        alt="" class="slider__img">
+        <img src="yujiro.jpg" alt="" class="slider__img">
       </div>
-
       <div class="slider__section">
-        <img src="yuuhichiro.jpeg" 
-        alt="" class="slider__img">
+        <img src="yuuhichiro.jpeg" alt="" class="slider__img">
       </div>
-
     </div>
-
     <div class="slider__btn slider__btn--right" id="btn-right">&#62;</div>
     <div class="slider__btn slider__btn--left" id="btn-left">&#60;</div>
-  
   </div>
 
 </body>
