--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
 <body>   
 
+  <div class="slider">
+    <div class="slides">
+      <input type="radio" name="radio-btn" id="radio1">
+      <input type="radio" name="radio-btn" id="radio2">
+      <input type="radio" name="radio-btn" id="radio3">
+      <input type="radio" name="radio-btn" id="radio4">
+    </div>
+  </div>
 
 </body>
 
