--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>   
 
+<section class="sliderPrime">
+
   <div class="slider">
     <div class="slides">
       <input type="radio" name="radio-btn" id="radio1">
@@ -49,6 +51,8 @@
 
   </div>
 
+</section>
+  
 </body>
 
 </html>
