--- a/index.html
+++ b/index.html
@@ -9,50 +9,6 @@
     <title>PROVAS PER LA WEB</title>
 </head>
 
-<body>   
-
-<section class="sliderPrime">
-
-  <div class="slider">
-    <div class="slides">
-      <input type="radio" name="radio-btn" id="radio1">
-      <input type="radio" name="radio-btn" id="radio2">
-      <input type="radio" name="radio-btn" id="radio3">
-      <input type="radio" name="radio-btn" id="radio4">
-
-      <div class="slide first">
-        <img src="baki.jpeg" alt="">
-      </div>
-      <div class="slide">
-        <img src="jack.jpeg" alt="">
-      </div>
-      <div class="slide">
-        <img src="yujiro.jpg" alt="">
-      </div>
-      <div class="slide">
-        <img src="yuuhichiro.jpeg" alt="">
-      </div>
-
-      <div class="nav-auto">
-        <div class="auto-btn1"></div>
-        <div class="auto-btn2"></div>
-        <div class="auto-btn3"></div>
-        <div class="auto-btn4"></div>
-      </div>
-
-    </div>
-
-    <div class="nav-manual">
-      <label for="radio1" class="manual-btn"></label>
-      <label for="radio2" class="manual-btn"></label>
-      <label for="radio3" class="manual-btn"></label>
-      <label for="radio4" class="manual-btn"></label>
-    </div>
-
-  </div>
-
-</section>
-  
-</body>
+<body></body>
 
 </html>
