--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <title>PROVAS PER LA WEB</title>
 </head>
 
-<body></body>
+<body>
+
+  <img src="yuuhichiro.jpeg" id="imagen" onclick="cargarPagina()"/>
+  <div id="pantallaEspera">
+    <div class="spinner"></div>
+  </div>
+
+</body>
 
 </html>
