--- a/index.html
+++ b/index.html
@@ -9,13 +9,67 @@
     <title>PROVAS PER LA WEB</title>
 </head>
 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>My Website</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="script.js"></script>
+</head>
 <body>
-
-  <img src="yuuhichiro.jpeg" id="imagen" onclick="cargarPagina()"/>
-  <div id="pantallaEspera">
-    <div class="spinner"></div>
-  </div>
-
+	<header>
+		<nav>
+			<ul>
+				<li><a href="#slider">Slider</a></li>
+				<li><a href="#photos">Photos</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section id="slider">
+			<div class="slider-container">
+				<div class="slider-item">
+					<img src="image1.jpg">
+				</div>
+				<div class="slider-item">
+					<img src="image2.jpg">
+				</div>
+				<div class="slider-item">
+					<img src="image3.jpg">
+				</div>
+				<div class="slider-item">
+					<img src="image4.jpg">
+				</div>
+			</div>
+			<div class="slider-controls">
+				<button class="slider-button" onclick="prevSlide()">Prev</button>
+				<button class="slider-button" onclick="nextSlide()">Next</button>
+			</div>
+		</section>
+		<section id="photos">
+			<div class="photos-container">
+				<img src="photo1.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+				<img src="photo2.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+				<img src="photo3.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+				<img src="photo4.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+				<img src="photo5.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+			</div>
+		</section>
+		<section id="contact">
+			<h2>Contact</h2>
+			<p>Feel free to contact us using the following information:</p>
+			<ul>
+				<li>Email: info@mywebsite.com</li>
+				<li>Phone: 123-456-7890</li>
+			</ul>
+			<h2>Follow us on social media:</h2>
+			<ul class="social-media">
+				<li><a href="#"><img src="facebook.png"></a></li>
+				<li><a href="#"><img src="twitter.png"></a></li>
+				<li><a href="#"><img src="instagram.png"></a></li>
+			</ul>
+		</section>
+	</main>
 </body>
-
 </html>
