--- a/index.html
+++ b/index.html
@@ -47,12 +47,17 @@
 				<button class="slider-button" onclick="nextSlide()">Next</button>
 			</div>
 		</section>
+
+
+
+
+
 		<section id="photos">
 			<div class="photos-container">
-				<img src="photo1.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
-				<img src="photo2.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
-				<img src="photo3.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
-				<img src="photo4.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+				<img src="baki.jpeg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+				<img src="jack.jpeg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+				<img src="yujiro.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+				<img src="yuuhichiro.jpeg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
 				<img src="photo5.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
 			</div>
 		</section>
