--- a/index.html
+++ b/index.html
@@ -49,18 +49,16 @@
 		</section>
 
 
-
-
-
-		<section id="photos">
-			<div class="photos-container">
-				<img src="baki.jpeg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
-				<img src="jack.jpeg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
-				<img src="yujiro.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
-				<img src="yuuhichiro.jpeg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
-				<img src="photo5.jpg" class="photo-item" onmouseover="animatePhoto(this)" onmouseout="stopAnimatePhoto(this)">
+		<section class="imagen">
+			<img src="baki.jpeg" alt="Imagen 1">
+			<img src="jack.jpeg" alt="Imagen 2">
+			<img src="yujiro.jpg" alt="Imagen 3">
+			<img src="yuuhichiro.jpeg" alt="Imagen 4">
+			<div class="overlay">
+			  <p>hola que hace</p>
 			</div>
-		</section>
+		  </section>
+		  
 
 
 		<section id="contact">
