--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
 	</main>
 
 
+
+	<img src="imagen.jpg" id="imagen" onclick="cargarPagina()"/>
+<div id="pantallaEspera">
+  <!-- aquí iría el código HTML de la animación -->
+</div>
+
+
+
   
 </body>
 </html>
