--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
 
-	<img src="imagen.jpg" id="imagen" onclick="cargarPagina()"/>
+	<img src="yujiro.jpg" id="imagen" onclick="cargarPagina()"/>
 <div id="pantallaEspera">
   <!-- aquí iría el código HTML de la animación -->
 </div>
