--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=<ul class="nav">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style/style.css">
+	<title>Document</title>
+</head>
+<body>
+	<ul class="nav">
 		<li><a href="index.html">Inici</a></li>
 	  
 		<li><a href="Informació dels Cantants.html">Informació dels Cantants</a>
@@ -44,10 +49,6 @@
 			<li><a href="https://ca.wikipedia.org/wiki/Bruno_Mars" target="_blank">Bruno Mars</a></li>
 		  </ul>
 		</li>
-	  </ul>, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	
+	  </ul>
 </body>
 </html>
