--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
 		<li><a href="qui_som">QUI SOM?</a></li>
 	
 	  </ul>
+
+
+	  <p>I am a paragraph. A short one.</p>
+<ul>
+  <li>Item One</li>
+  <li>Item Two</li>
+  <li>Item Three</li>
+</ul>
+<p>I am another paragraph. Some of the <span class="block">words</span> have been wrapped in a <span>span element</span>.</p>
+
 </body>
 </html>
